<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constrainedHeight="true"
    tools:context=".MainActivity">
    <!--hello text-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/Hello"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        tools:layout_editor_absoluteY="14dp" />
    <!--user text-->
    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!--notes button-->
    <Button
        android:id="@+id/btn_notes"
        android:layout_width="334dp"
        android:layout_height="234dp"
        android:text="@string/Notes"
        android:textSize="20sp"/>
    <!-- password button-->
    <Button
        android:id="@+id/btn_pass"
        android:layout_width="334dp"
        android:layout_height="234dp"
        android:text="@string/Passwords"
        android:textSize="20sp"/>

    <!--logout button-->
    <Button
        android:id="@+id/logout"
        android:layout_width="334dp"
        android:layout_height="66dp"
        android:text="@string/logout"
        android:textSize="20sp" />

</LinearLayout>